--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,8 +22,10 @@
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@types/jquery": "^3.3.22",
+    "angular-highcharts": "^7.0.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "highcharts": "^6.2.0",
     "jquery": "^3.3.1",
     "ng-recaptcha": "^4.2.1",
     "rxjs": "^6.0.0",
