--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -28,6 +28,7 @@
     "highcharts": "^6.2.0",
     "jquery": "^3.3.1",
     "ng-recaptcha": "^4.2.1",
+    "ng2-uploader": "^2.0.0",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
