--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.3.1",
     "ng-recaptcha": "^4.2.1",
     "ng2-uploader": "^2.0.0",
+    "ngx-modialog": "^5.0.1",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
