--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,12 +25,14 @@
     "angular-highcharts": "^7.0.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "file-saver": "^2.0.0",
     "highcharts": "^6.2.0",
     "jquery": "^3.3.1",
     "ng-recaptcha": "^4.2.1",
     "ng2-uploader": "^2.0.0",
     "ngx-modialog": "^5.0.1",
     "rxjs": "^6.0.0",
+    "xlsx": "^0.14.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
