--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
+    "@angular/fire": "^5.1.0",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
     "@angular/platform-browser": "^6.1.0",
@@ -23,9 +24,11 @@
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@types/jquery": "^3.3.22",
     "angular-highcharts": "^7.0.2",
+    "angularfire2": "^5.1.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "file-saver": "^2.0.0",
+    "firebase": "^5.5.9",
     "highcharts": "^6.2.0",
     "jquery": "^3.3.1",
     "ng-recaptcha": "^4.2.1",
